<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.codepath.chirrupy.activities.TimelineActivity">

    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_compose"
          android:icon="@drawable/ic_action_compose"
          android:title="@string/action_compose"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_profile"
          android:icon="@drawable/ic_action_profile"
          android:title="@string/action_profile"
          app:showAsAction="ifRoom"
          android:orderInCategory="100" />

    <!--<item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>-->
</menu>
