<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.codepath.chirrupy.activities.ComposeActivity"
                android:padding="20dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/text_content_missing"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:textColor="@android:color/black"
        android:paddingStart="10dp"
        android:paddingEnd="2dp"
        android:text="@string/text_content_missing" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_alignBottom="@+id/ivProfileImage"
        android:layout_alignStart="@+id/tvUserName"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="2dp">
        <TextView
            android:id="@+id/tvScreenName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/text_content_missing"
            android:layout_weight="0.75"/>

        <TextView
            android:id="@+id/tvRemaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="11sp"
            android:text="@string/text_starting_count"/>
    </LinearLayout>



    <EditText
        android:id="@+id/etBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfileImage"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:hint="@string/hello_world"
        android:maxLength="140" />

</RelativeLayout>